fix navigation on mobile

--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -14,6 +14,10 @@
     @include max700 {
         grid-template-rows: 35% 65%;
     }
+
+    @include max550 {
+        grid-template-rows: 25% 75%;
+    }
 }
 .home-header {
     grid-area: header;
@@ -42,6 +46,9 @@
         text-transform: uppercase;
         -webkit-box-reflect: above 0 -webkit-gradient(linear, left bottom, left top, from(transparent), color-stop(0.35, transparent), to(rgba(0, 0, 0, 0.25)));
 
+        @include max550 {
+            margin: 0;
+        }
     }
     
     @include min700 {
@@ -133,9 +140,13 @@
         }
 
         @include max550 {
-            li a {
-                font-size: 1.2rem;
+            li {
+                margin: 0.7em;
+                a {
+                    font-size: 1.2rem;
+                }
             }
+                
         }
     }
 
